---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 27/9/25
  Minor Features:
    - Added command /simple-trade-loops, which dumps to the script-output all existing two-trade loops in your game involving only two items at a time.
        Faster and more convenient than analyzing trade JSON exports yourself, but less useful since no metrics are measured.
  Changes:
    - Revised item rank up requirements:
        Bronze - unchanged (buy and sell item once)
        Silver - buy this item using a trade with at least +10% productivity
        Gold - electrocute an enemy unit near a trade involving this item with +70% productivity
        Red - sell this item using a trade with at least +110% productivity
  Gui:
    - Trade productivity info now always shows even when the total amount sums to 0%.
  Bugfixes:
    - Trade generation inside a single hex core no longer permits infinite trade loops between two trades (preserving performance).
        Single-hex loops of three trades or more are still possible but are very unlikely, and detection of such more heavily impacts performance.
    - Fixed the quadratic interpolation of random trade volume sampling, making higher valued items show up in trades closer to the center of each planet.
    - Fixed the planet listing method for the silver bonus description in the catalog so that modded surfaces don't show up.
    - Fixed locale for tesla destroyer robot tech.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 27/8/25
  Translation:
    - Updated Russian translations. (courtesy Shadow_Man)
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 22/8/25
  Major Features:
    - Moved dungeons off of the oceans and into the main bulk of land.