@@ -440,6 +440,9 @@ local process_migration = {
     ["1.1.0"] = function()
     end,
     ["1.1.1"] = function()
+        storage.quests.quest_defs = data_quests.quest_defs
+        quests.reinitialize_everything()
+
         -- Recalculate trade volume base per planet.
         for surface_name, _ in pairs(storage.trades.trade_volume_base) do
             storage.trades.trade_volume_base[surface_name] = nil -- Triggers recalculating the correct value
