@@ -588,8 +588,8 @@ trades-galore=[img=trade-overview] Trades Galore
 i-really-need-that=[img=hex-coin] I Really Need That
 i-really-dont-need-that=[img=virtual-signal.signal-trash-bin] I Really Don't Need That
 catalog-initiate=[img=bronze-star] Catalog Initiate
+catalog-professional=[img=red-star] Catalog Professional
 # NOT YET USED
-#catalog-professional=[img=silver-star] Catalog Professional
 #catalog-master=[img=gold-star] Catalog Master
 #catalog-completionist=[img=red-star] Catalog Completionist
 #novice-trader=[img=trade-overview] Novice Trader
@@ -640,8 +640,8 @@ trades-galore=Find many trades. If only there was something you could do with th
 i-really-need-that=Shut up and take my money!
 i-really-dont-need-that=Perhaps one of the more convenient features, you can switch a hex core into sink mode, which sinks items for a small coin return.
 catalog-initiate=It's time to level up your catalog items. Check the catalog to see an item's rank-up requirements!
+catalog-professional=Ranking up items on several planets draws the attention of intergalactic traders.
 # NOT YET USED
-#catalog-professional=Level up some of your catalog items to the next rank. This next rank requires you to make trades with that item.
 #catalog-master=
 #catalog-completionist=You know the assignment. Good luck.
 #novice-trader=Actively make trades with a hex core. Yes, you can technically do this by manually supplying a hex core, but it's easier to automate it and walk away! The starting hex has some good trades for this. For trading at a hex core to be counted as automated, you must make __1__ trades there in 60 seconds.
