@@ -585,7 +585,7 @@ trades-galore=[img=trade-overview] Торговля в изобилии
 i-really-need-that=[img=hex-coin] Мне на самом деле это нужно
 i-really-dont-need-that=[img=virtual-signal.signal-trash-bin] Мне на самом деле это не нужно
 catalog-initiate=[img=bronze-star] Инициация каталога
-#catalog-professional=[img=silver-star] Профессионал каталога
+catalog-professional=[img=red-star] Профессионал каталога
 #catalog-master=[img=gold-star] Мастер каталога
 #catalog-completionist=[img=red-star] Заполнитель каталога
 #novice-trader=[img=trade-overview] Новичок в торговле
